// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Menu di navigazione/BottomNav Alert 1`] = `
<div>
  <nav
    class="bottom-nav"
  >
    <ul>
      <li>
        <a
          class=""
          href="#"
        >
          <div
            class="badge-wrapper"
          >
            <span
              class="bottom-nav-alert"
            />
          </div>
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h2v5.4l1.7-1.7 3.7-3.7H19c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm1 12c.1.5-.3.9-.8 1H12l-4 4v-4H5c-.5.1-.9-.3-1-.8V5c-.1-.5.3-.9.8-1H19c.5-.1.9.3 1 .8V15zM9 10c.1.5-.3.9-.8 1H8c-.5.1-.9-.3-1-.8V10c-.1-.5.3-.9.8-1H8c.5-.1.9.3 1 .8v.2zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            messaggi
            <span
              class="visually-hidden"
            >
              - nuovo contenuto disponibile
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 20h-17c-.8 0-1.5-.7-1.5-1.5v-10C2 7.7 2.7 7 3.5 7h4.3l1.5-2.3c.3-.4.7-.7 1.2-.7h3c.5 0 .9.3 1.2.7L16.2 7h4.3c.8 0 1.5.7 1.5 1.5v10c0 .8-.7 1.5-1.5 1.5zM3.5 8c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h17c.3 0 .5-.2.5-.5v-10c0-.3-.2-.5-.5-.5h-4.8l-1.8-2.8-.4-.2h-3l-.4.2L8.3 8H3.5zM12 18c-2.8 0-5-2.2-5-5s2.2-5 5-5 5 2.2 5 5-2.2 5-5 5zm0-9c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zM7 5H4v1h3V5z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            immagini
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <div
            class="badge-wrapper"
          >
            <span
              class="bottom-nav-alert"
            />
          </div>
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M14.7 2H6.5C5.7 2 5 2.7 5 3.5v17c0 .8.7 1.5 1.5 1.5h11c.8 0 1.5-.7 1.5-1.5V6.3L14.7 2zm.3 1.7L17.3 6h-1.8c-.3 0-.5-.2-.5-.5V3.7zM17.5 21h-11c-.3 0-.5-.2-.5-.5v-17c0-.3.2-.5.5-.5H14v2.5c0 .8.7 1.5 1.5 1.5H18v13.5c0 .3-.2.5-.5.5zM8 9h8v1H8V9zm0 2h8v1H8v-1zm0 2h4v1H8v-1z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            documenti
            <span
              class="visually-hidden"
            >
              - nuovo contenuto disponibile
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m12 4.9 1.5 4.6.2.7h5.7l-4 2.9-.6.4.2.7 1.5 4.7-3.9-2.9-.6-.4-.6.4-3.9 2.9L9 14.2l.2-.7-.6-.4-4-2.9h5.7l.2-.7L12 4.9m0-3.2L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            preferiti
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M12 7.5c-2.5 0-4.5 2-4.5 4.5s2 4.5 4.5 4.5 4.5-2 4.5-4.5-2-4.5-4.5-4.5zm0 8c-1.9 0-3.5-1.6-3.5-3.5s1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5-1.6 3.5-3.5 3.5zm9.8-1.6c.1-.6.2-1.3.2-1.9 0-.6-.1-1.3-.2-1.9l-2.1-.3c-.2-.6-.4-1.2-.7-1.7l1.3-1.7c-.7-1.1-1.6-2-2.7-2.7L15.9 5l-1.7-.7-.3-2.1L12 2l-1.9.2-.3 2.1-1.7.7-1.7-1.3c-1.1.7-2 1.6-2.7 2.7L5 8.1c-.3.5-.5 1.1-.7 1.7l-2.1.3c-.1.6-.2 1.3-.2 1.9 0 .6.1 1.3.2 1.9l2.1.3c.2.6.4 1.2.7 1.7l-1.3 1.7c.7 1.1 1.6 2 2.7 2.7L8.1 19l1.7.7.3 2.1 1.9.2 1.9-.2.3-2.1 1.7-.7 1.7 1.3c1.1-.7 2-1.6 2.7-2.7L19 15.9c.3-.5.5-1.1.7-1.7l2.1-.3zm-2.9-.7-.2.7c-.1.5-.3 1-.6 1.5l-.3.6.4.5.8 1.1c-.4.5-.9 1-1.4 1.4l-1.1-.8-.5-.4-.6.3c-.5.3-1 .5-1.5.6l-.7.2v.7l-.2 1.3h-2l-.2-1.3v-.7l-.7-.2c-.5-.1-1-.3-1.5-.6l-.6-.3-.5.4-1.1.8c-.5-.4-1-.9-1.4-1.4l.8-1.1.4-.5-.3-.6c-.3-.5-.5-1-.6-1.5l-.2-.7h-.7L3.1 13c-.1-.3-.1-.7-.1-1 0-.3 0-.7.1-1l1.3-.2h.7l.2-.7c.1-.5.3-1 .6-1.5l.3-.6-.4-.5L5 6.4 6.4 5l1.1.8.5.4.6-.3c.5-.3 1-.5 1.5-.6l.7-.2v-.7l.2-1.3h2l.2 1.3v.7l.7.2c.5.1 1 .3 1.5.6l.6.3.5-.4 1.1-.8c.5.4 1 .9 1.4 1.4l-.8 1.1-.4.5.3.6c.3.5.5 1 .6 1.5l.2.7h.7l1.3.2c.1.3.1.7.1 1 0 .3 0 .7-.1 1l-1.3.2h-.7z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            preferenze
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/BottomNav Esempi 1`] = `
<div>
  <nav
    class="bottom-nav"
  >
    <ul>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h2v5.4l1.7-1.7 3.7-3.7H19c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm1 12c.1.5-.3.9-.8 1H12l-4 4v-4H5c-.5.1-.9-.3-1-.8V5c-.1-.5.3-.9.8-1H19c.5-.1.9.3 1 .8V15zM9 10c.1.5-.3.9-.8 1H8c-.5.1-.9-.3-1-.8V10c-.1-.5.3-.9.8-1H8c.5-.1.9.3 1 .8v.2zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            messaggi
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 20h-17c-.8 0-1.5-.7-1.5-1.5v-10C2 7.7 2.7 7 3.5 7h4.3l1.5-2.3c.3-.4.7-.7 1.2-.7h3c.5 0 .9.3 1.2.7L16.2 7h4.3c.8 0 1.5.7 1.5 1.5v10c0 .8-.7 1.5-1.5 1.5zM3.5 8c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h17c.3 0 .5-.2.5-.5v-10c0-.3-.2-.5-.5-.5h-4.8l-1.8-2.8-.4-.2h-3l-.4.2L8.3 8H3.5zM12 18c-2.8 0-5-2.2-5-5s2.2-5 5-5 5 2.2 5 5-2.2 5-5 5zm0-9c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zM7 5H4v1h3V5z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            immagini
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M14.7 2H6.5C5.7 2 5 2.7 5 3.5v17c0 .8.7 1.5 1.5 1.5h11c.8 0 1.5-.7 1.5-1.5V6.3L14.7 2zm.3 1.7L17.3 6h-1.8c-.3 0-.5-.2-.5-.5V3.7zM17.5 21h-11c-.3 0-.5-.2-.5-.5v-17c0-.3.2-.5.5-.5H14v2.5c0 .8.7 1.5 1.5 1.5H18v13.5c0 .3-.2.5-.5.5zM8 9h8v1H8V9zm0 2h8v1H8v-1zm0 2h4v1H8v-1z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            documenti
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/BottomNav Esempi4Links 1`] = `
<div>
  <nav
    class="bottom-nav"
  >
    <ul>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h2v5.4l1.7-1.7 3.7-3.7H19c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm1 12c.1.5-.3.9-.8 1H12l-4 4v-4H5c-.5.1-.9-.3-1-.8V5c-.1-.5.3-.9.8-1H19c.5-.1.9.3 1 .8V15zM9 10c.1.5-.3.9-.8 1H8c-.5.1-.9-.3-1-.8V10c-.1-.5.3-.9.8-1H8c.5-.1.9.3 1 .8v.2zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            messaggi
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 20h-17c-.8 0-1.5-.7-1.5-1.5v-10C2 7.7 2.7 7 3.5 7h4.3l1.5-2.3c.3-.4.7-.7 1.2-.7h3c.5 0 .9.3 1.2.7L16.2 7h4.3c.8 0 1.5.7 1.5 1.5v10c0 .8-.7 1.5-1.5 1.5zM3.5 8c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h17c.3 0 .5-.2.5-.5v-10c0-.3-.2-.5-.5-.5h-4.8l-1.8-2.8-.4-.2h-3l-.4.2L8.3 8H3.5zM12 18c-2.8 0-5-2.2-5-5s2.2-5 5-5 5 2.2 5 5-2.2 5-5 5zm0-9c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zM7 5H4v1h3V5z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            immagini
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M14.7 2H6.5C5.7 2 5 2.7 5 3.5v17c0 .8.7 1.5 1.5 1.5h11c.8 0 1.5-.7 1.5-1.5V6.3L14.7 2zm.3 1.7L17.3 6h-1.8c-.3 0-.5-.2-.5-.5V3.7zM17.5 21h-11c-.3 0-.5-.2-.5-.5v-17c0-.3.2-.5.5-.5H14v2.5c0 .8.7 1.5 1.5 1.5H18v13.5c0 .3-.2.5-.5.5zM8 9h8v1H8V9zm0 2h8v1H8v-1zm0 2h4v1H8v-1z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            documenti
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m12 4.9 1.5 4.6.2.7h5.7l-4 2.9-.6.4.2.7 1.5 4.7-3.9-2.9-.6-.4-.6.4-3.9 2.9L9 14.2l.2-.7-.6-.4-4-2.9h5.7l.2-.7L12 4.9m0-3.2L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            preferiti
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/BottomNav EsempioBadge 1`] = `
<div>
  <nav
    class="bottom-nav"
  >
    <ul>
      <li>
        <a
          class=""
          href="#"
        >
          <div
            class="badge-wrapper"
          >
            <span
              class="bottom-nav-badge"
            >
              1
            </span>
          </div>
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h2v5.4l1.7-1.7 3.7-3.7H19c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm1 12c.1.5-.3.9-.8 1H12l-4 4v-4H5c-.5.1-.9-.3-1-.8V5c-.1-.5.3-.9.8-1H19c.5-.1.9.3 1 .8V15zM9 10c.1.5-.3.9-.8 1H8c-.5.1-.9-.3-1-.8V10c-.1-.5.3-.9.8-1H8c.5-.1.9.3 1 .8v.2zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1zm4 0c0 .6-.4 1-1 1s-1-.4-1-1 .4-1 1-1 1 .4 1 1z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            messaggi
            <span
              class="visually-hidden"
            >
              - 1 da leggere
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          class="active"
          href="#"
        >
          <div
            class="badge-wrapper"
          >
            <span
              class="bottom-nav-badge"
            >
              2
            </span>
          </div>
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M20.5 20h-17c-.8 0-1.5-.7-1.5-1.5v-10C2 7.7 2.7 7 3.5 7h4.3l1.5-2.3c.3-.4.7-.7 1.2-.7h3c.5 0 .9.3 1.2.7L16.2 7h4.3c.8 0 1.5.7 1.5 1.5v10c0 .8-.7 1.5-1.5 1.5zM3.5 8c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h17c.3 0 .5-.2.5-.5v-10c0-.3-.2-.5-.5-.5h-4.8l-1.8-2.8-.4-.2h-3l-.4.2L8.3 8H3.5zM12 18c-2.8 0-5-2.2-5-5s2.2-5 5-5 5 2.2 5 5-2.2 5-5 5zm0-9c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.8-4-4-4zM7 5H4v1h3V5z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            immagini
            <span
              class="visually-hidden"
            >
              - 2 da vedere
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <div
            class="badge-wrapper"
          >
            <span
              class="bottom-nav-badge"
            >
              88
            </span>
          </div>
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M14.7 2H6.5C5.7 2 5 2.7 5 3.5v17c0 .8.7 1.5 1.5 1.5h11c.8 0 1.5-.7 1.5-1.5V6.3L14.7 2zm.3 1.7L17.3 6h-1.8c-.3 0-.5-.2-.5-.5V3.7zM17.5 21h-11c-.3 0-.5-.2-.5-.5v-17c0-.3.2-.5.5-.5H14v2.5c0 .8.7 1.5 1.5 1.5H18v13.5c0 .3-.2.5-.5.5zM8 9h8v1H8V9zm0 2h8v1H8v-1zm0 2h4v1H8v-1z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            documenti
            <span
              class="visually-hidden"
            >
              - 88 da esaminare
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m12 4.9 1.5 4.6.2.7h5.7l-4 2.9-.6.4.2.7 1.5 4.7-3.9-2.9-.6-.4-.6.4-3.9 2.9L9 14.2l.2-.7-.6-.4-4-2.9h5.7l.2-.7L12 4.9m0-3.2L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            preferiti
          </span>
        </a>
      </li>
      <li>
        <a
          class=""
          href="#"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="M12 7.5c-2.5 0-4.5 2-4.5 4.5s2 4.5 4.5 4.5 4.5-2 4.5-4.5-2-4.5-4.5-4.5zm0 8c-1.9 0-3.5-1.6-3.5-3.5s1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5-1.6 3.5-3.5 3.5zm9.8-1.6c.1-.6.2-1.3.2-1.9 0-.6-.1-1.3-.2-1.9l-2.1-.3c-.2-.6-.4-1.2-.7-1.7l1.3-1.7c-.7-1.1-1.6-2-2.7-2.7L15.9 5l-1.7-.7-.3-2.1L12 2l-1.9.2-.3 2.1-1.7.7-1.7-1.3c-1.1.7-2 1.6-2.7 2.7L5 8.1c-.3.5-.5 1.1-.7 1.7l-2.1.3c-.1.6-.2 1.3-.2 1.9 0 .6.1 1.3.2 1.9l2.1.3c.2.6.4 1.2.7 1.7l-1.3 1.7c.7 1.1 1.6 2 2.7 2.7L8.1 19l1.7.7.3 2.1 1.9.2 1.9-.2.3-2.1 1.7-.7 1.7 1.3c1.1-.7 2-1.6 2.7-2.7L19 15.9c.3-.5.5-1.1.7-1.7l2.1-.3zm-2.9-.7-.2.7c-.1.5-.3 1-.6 1.5l-.3.6.4.5.8 1.1c-.4.5-.9 1-1.4 1.4l-1.1-.8-.5-.4-.6.3c-.5.3-1 .5-1.5.6l-.7.2v.7l-.2 1.3h-2l-.2-1.3v-.7l-.7-.2c-.5-.1-1-.3-1.5-.6l-.6-.3-.5.4-1.1.8c-.5-.4-1-.9-1.4-1.4l.8-1.1.4-.5-.3-.6c-.3-.5-.5-1-.6-1.5l-.2-.7h-.7L3.1 13c-.1-.3-.1-.7-.1-1 0-.3 0-.7.1-1l1.3-.2h.7l.2-.7c.1-.5.3-1 .6-1.5l.3-.6-.4-.5L5 6.4 6.4 5l1.1.8.5.4.6-.3c.5-.3 1-.5 1.5-.6l.7-.2v-.7l.2-1.3h2l.2 1.3v.7l.7.2c.5.1 1 .3 1.5.6l.6.3.5-.4 1.1-.8c.5.4 1 .9 1.4 1.4l-.8 1.1-.4.5.3.6c.3.5.5 1 .6 1.5l.2.7h.7l1.3.2c.1.3.1.7.1 1 0 .3 0 .7-.1 1l-1.3.2h-.7z"
            />
          </svg>
          <span
            class="bottom-nav-label"
          >
            preferenze
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
